# odo

./: extra-requirements.txt  pyproject.toml  setup.py  versioneer.py
etc/: requirements_ci.txt
odo/: chunks.py  convert.py  core.py
odo/backends/: aws.py  dask.py  hdfs.py  json.py  mongo.py  sas.py  sparksql.py  sql.py  text.py
odo/backends/tests/: test_csv.py  test_sas.py
odo_canopy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
