[project]
name = "odo"
description = "Run Canopy code anywhere"
readme = "README.md"
requires-python = ">=3.10,<4"
authors = [{ name = "Felipe de Oliveira", email = "felipe.oliveira@canopyco.io" }]
dynamic = ["version"]

[tool.poetry]
name = "odo"
version = "3.0.0"
description = ""
authors = ["felipe-canopy <felipe.oliveira@canopyco.io>"]

[tool.bandit]
exclude = ["canopy_client/rabbitmq/test", "canopy_client/rabbitmq/run","venv"]
exclude_dirs = ["venv"]
tests = ["B201","B301"]
skips = ["B101","B601"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
sqlalchemy = "^1.3.0"
h5py = "^3.13.0"
pymongo = "^4.6.1"
sas7bdat = "^2.2.3"
paramiko = "^3.5.1"
pywebhdfs = "^0.4.1"
boto = "^2.49.0"
sqlalchemy-redshift = "^0.8.14"
datashape = "^0.5.2"
pandas = "^2.2.3"
toolz = "^1.0.0"
multipledispatch = "^1.0.0"
dask = "^2025.3.0"
numpy = "^2.2.4"
networkx = "^3.4.2"

[tool.poetry.group.dev.dependencies]
setuptools = {version = "^68.0.0", python = ">=3.7"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"